# EnergyMe-Home

./: .gitignore  CHANGELOG.md  EnergyMe-Home_Installation-Manual_v0.7.md  README.md  SECURITY.md
.github/: WORKFLOWS.md  copilot-instructions.md
.github/workflows/: check-manual-translations.yml  platformio-build.yml  release.yml  todo-to-issue.yml
documentation/: README.md
documentation/Schematics/: BOM.csv  LICENSE
examples/multiple-EMs-autoChannel/: index.php  meter_ajax.php
hardware/: README.md  datasheet.md
hardware/pcb/: COPYRIGHT
install_docs/: installation_manual.md
install_docs/EN/: 03-software-configuration.md
install_docs/IT/: 03-configurazione-software.md
manual/: 01-installation.md  02-setup.md  03-troubleshooting.md  README.md  appendices.md  build_pdfs.py  check-translations.ps1  check_translations.py  installation_manual.md  pdf.css  safety-and-compliance.md
manual/EN/: 02-electrical-installation.md
manual/IT/: 02-installazione-elettrica.md  03-configurazione-software.md
manual/de/: 01-installation.md  02-setup.md  03-troubleshooting.md  README.md  appendices.md  safety-and-compliance.md
manual/fr/: 01-installation.md  02-setup.md  03-troubleshooting.md  README.md  appendices.md  safety-and-compliance.md
mcp-server/: README.md  mcp-config-example.json  pyproject.toml  server.py
source/: .env.example  .env.template  .gitignore  CLAUDE.md  DSO comparison.xlsx  LICENSE  MOBILE_IMPROVEMENTS_ROADMAP.md  README.md  partitions.csv  partitions_esp32s3_n16r2.csv  platformio.ini  pyproject.toml
tests/: test_wdrr_scheduler.py
(+133 files in other folders)
