[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "energyme-home-mcp"
version = "0.1.0"
description = "MCP server for EnergyMe-Home project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.23.0",
    "pyyaml>=6.0",
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "black>=26.3.1",
]
